# job-tracker

job-tracker-neutralino/: .gitignore  README.md  index.html  neutralino.config.json  package-lock.json  package.json  vite.api.config.js  vite.config.js
job-tracker-neutralino/extensions-src/: CMakeLists.txt  README.md  main.cpp  uuid.hpp
job-tracker-neutralino/resources/: builder-debug.yml  index.html
job-tracker-neutralino/resources/assets/: index-BEDzzdAv.js  index-BNRTceLQ.js  index-C67a4-MS.js  index-D7xZ_cm7.js  index-DeXB-918.css  index-DhezW-tS.css  index-Dkc3LYHH.js  index-DpUuHk-v.js  index-DxtbCeGP.js  index-FEaQ-pjw.css  index-GtPYhJ97.css
job-tracker-neutralino/resources/js/: api.js
job-tracker-neutralino/scripts/: build-extension.ps1  copy-sql-wasm.js  setup-extension-deps.ps1
job-tracker-neutralino/src/: App.jsx  index.css
job-tracker-neutralino/src/components/: AddJobTab.jsx  DatabaseTab.jsx  SettingsTab.jsx
job-tracker-neutralino/src/neutralino-api/: ai-cleaner.js  database.js  extension-backend.js  index.js  sqlite-client.js  sqljs-backend.js
job-tracker-web/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
job-tracker-web/src/: index.css  main.jsx
job-tracker-web/src/components/: AddNewTab.jsx  App.jsx  DatabaseTab.jsx  JobDetailDrawer.jsx  MainContent.jsx  Sidebar.jsx  SignIn.jsx  SignUp.jsx
job-tracker-web/src/contexts/: AuthContext.jsx
job-tracker-web/src/lib/: supabase.js
job-tracker-web/supabase/functions/clean-job/: index.ts
